--- a/modal.html
+++ b/modal.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/gridbox.css">
-    <title>Sample Home Page</title>
+    <title>Sample Modal Page</title>
 </head>
 <body>
 
