fix index.html tag issue

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
     <title>Sample Home Page</title>
 </head>
 <body class="bg-white">
-    <div class="container-fluid">
-
+    <section class="container-fluid">
         <!-- navigation menu -->
-        <section class="nav" id="navbar">
+        <div class="nav" id="navbar">
             <!-- Brand -->
             <div class="brand fixed top-left">
                 <img src="img/gridbox_logo.png" alt="">
@@ -60,8 +59,7 @@
                     
                 </nav>
             </div>
-
-        </section> <!-- /.nav -->
+        </div> <!-- /.nav -->
 
         <!-- showcase carousel -->
         <div class="carousel margin-bottom-45" id="carousel1">
@@ -117,7 +115,6 @@
                 </div>
             </div>
         </div>
-
     </section> <!-- .container-fluid -->
 
 
@@ -160,8 +157,8 @@
     <!-- card section -->
     <section class="container-fluid padding-top-45 padding-bottom-45 bg-white">
         <h2 class="section-title center-text padding-around-45 margin-bottom-30">Card Section</h2>
-        <div class="row">
-            <div class="col-offset-2 col-12 col-offset-2 col-lap-4 col-lap-offset-1 col-tab-5 col-tab-offset-2 card bg-lightgray">
+        <div class="row horizontal-align-center">
+            <div class="col-12 col-lap-4 col-tab-5 card bg-lightgray">
                 <img src="/img/sample-image-1.jpg" alt="" class="card-image">
                 <h3 class="card-title">Card Title</h3>
                 <p class="card-text">
@@ -170,7 +167,7 @@
                 <a href="#" class="btn btn-secondary">Click</a>
             </div>
 
-            <div class="col-offset-2 col-12 col-offset-2 col-lap-4 col-lap-offset-1 col-tab-5 col-tab-offset-2 card bg-lightgray">
+            <div class="col-12 col-lap-4 col-tab-5 card bg-lightgray">
                 <img src="/img/sample-image-2.jpg" alt="" class="card-image">
                 <h3 class="card-title">Card Title</h3>
                 <p class="card-text">
@@ -179,7 +176,7 @@
                 <a href="#" class="btn btn-secondary">Click</a>
             </div>
 
-            <div class="col-offset-2 col-12 col-offset-2 col-lap-4 col-lap-offset-1 col-tab-5 col-tab-offset-2 card bg-lightgray">
+            <div class="col-12 col-lap-4 col-tab-5 card bg-lightgray">
                 <img src="/img/sample-image-3.jpg" alt="" class="card-image">
                 <h3 class="card-title">Card Title</h3>
                 <p class="card-text">
@@ -291,7 +288,6 @@
             </div>
         </div>
     </section>
-
 
     <!-- footer -->
     <footer class="footer bg-offblack" id="footer">
