fix flexbox issue in IE

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <section class="container-fluid padding-top-45 padding-bottom-45 bg-white">
         <h2 class="section-title center-text padding-around-45 margin-bottom-30">Card Section</h2>
         <div class="row horizontal-align-center">
-            <div class="col-12 col-lap-4 col-tab-5 card bg-lightgray">
+            <div class="col-12 col-lap-4 col-tab-5 col-margin-30 card bg-lightgray">
                 <img src="/img/sample-image-1.jpg" alt="" class="card-image">
                 <h3 class="card-title">Card Title</h3>
                 <p class="card-text">
@@ -167,7 +167,7 @@
                 <a href="#" class="btn btn-secondary">Click</a>
             </div>
 
-            <div class="col-12 col-lap-4 col-tab-5 card bg-lightgray">
+            <div class="col-12 col-lap-4 col-tab-5 col-margin-30 card bg-lightgray">
                 <img src="/img/sample-image-2.jpg" alt="" class="card-image">
                 <h3 class="card-title">Card Title</h3>
                 <p class="card-text">
@@ -176,7 +176,7 @@
                 <a href="#" class="btn btn-secondary">Click</a>
             </div>
 
-            <div class="col-12 col-lap-4 col-tab-5 card bg-lightgray">
+            <div class="col-12 col-lap-4 col-tab-5 col-margin-30 card bg-lightgray">
                 <img src="/img/sample-image-3.jpg" alt="" class="card-image">
                 <h3 class="card-title">Card Title</h3>
                 <p class="card-text">
@@ -266,7 +266,7 @@
 
     <!-- single row grid section -->
     <section class="container-fuild">
-        <div class="showcase row bg-white verticle-align-center">
+        <div class="showcase row bg-white row-center">
             <div class="col">
                 <h2 class="section-title center-text padding-top padding-bottom">Single Row Grids</h2>
                 <h5 class="section-subtitle center-text margin-bottom-45">Lorem ihsum dolor sit amet consectetur adipisicing elit. Optio esse aliquid praesentium molestias.</h5>
