--- a/carousel.html
+++ b/carousel.html
@@ -201,7 +201,7 @@
         <h3 class="section-title margin-bottom-45 center-text">Carousel with Transition Effects</h3>
         <section class="carousel margin-bottom-45" id="carousel4">
             <div class="indicator bottom-center-30"></div>
-            <div class="carousel-customName bg-lightgray">
+            <div class="carousel-slide bg-lightgray">
                 <!-- 1st slide -->
                 <div class="showcase-carousel default show enlarge bg-white">
                     <div class="center-text padding-around absolute w-7 middle-center">
