--- a/index.html
+++ b/index.html
@@ -267,8 +267,53 @@
         </div>
     </section>
 
+    <!-- carousel slider -->
+    <section class="container-fuild bg-white">
+        <div class="carousel" id="carousel2">
+            <div class="indicator bottom-center-30"></div>
+            <div class="carousel-slide bg-lightgray">
+                <!-- 1st slide -->
+                <div class="showcase-carousel default show enlarge bg-white">
+                    <div class="center-text padding-around absolute w-7 middle-center">
+                        <h1 class="section-title margin-bottom">Showcase One Title</h1>
+                        <p class="section-subtitle margin-bottom-30">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi dignissimos repudiandae non dolorem facilis sed eos?</p>
+                    </div>
+                    <!-- optional hero background image & image mask -->
+                    <!-- <div class="hero-image">
+                        <div class="mask"></div>
+                        <img src="..." alt="...hero-img-title...">
+                    </div> -->
+                </div>
+                <!-- 2st slide -->
+                <div class="showcase-carousel show bg-peach">
+                    <div class="center-text padding-around absolute w-7 middle-center">
+                        <h1 class="section-title margin-bottom">Showcase Two Title</h1>
+                        <p class="section-subtitle margin-bottom-30">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi dignissimos repudiandae non dolorem dolor sit amet consectetur facilis sed eos?</p>
+                    </div>
+                    <!-- optional hero background image & image mask -->
+                    <!-- <div class="hero-image">
+                        <div class="mask"></div>
+                        <img src="..." alt="...hero-img-title...">
+                    </div> -->
+                </div>
+                <!-- 3rd slide -->
+                <div class="showcase-carousel show bg-pear">
+                    <div class="center-text padding-around absolute w-7 middle-center">
+                        <h1 class="section-title margin-bottom">Showcase Three Title</h1>
+                        <p class="section-subtitle margin-bottom-30">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi dignissimos dolor sit amet consectetur repudiandae non dolor sit amet consecteturdolorem facilis sed eos?</p>
+                    </div>
+                    <!-- optional hero background image & image mask -->
+                    <!-- <div class="hero-image">
+                        <div class="mask"></div>
+                        <img src="..." alt="...hero-img-title...">
+                    </div> -->
+                </div>
+            </div> <!-- carousel-customName -->
+        </div>
+    </section>
+
     <!-- single row grid section -->
-    <section class="container-fuild">
+    <section class="container-fuild bg-white">
         <div class="showcase row bg-white row-center">
             <div class="col">
                 <h2 class="section-title center-text padding-top padding-bottom">Single Row Grids</h2>
@@ -363,6 +408,14 @@
             im("#carousel1").carousel();
             im("#parallax").parallax();
             im(".image-grid").imageGrid();
+            im("#carousel2").carousel({
+                arrowToggle: false,
+                indicator: {
+                    text: ["Showcase One", "Showcase Two", "Showcase Three"]
+                },
+                transition: "slide",
+            });
+            im("#footer").footer(true);
         });
     </script>
 
