add carousel timeout feature

--- a/index.html
+++ b/index.html
@@ -420,6 +420,7 @@
     </script>
 
     <script>
+        // If Google Map API is used
         var footerHeight = 350,
             APIKey = "YourAPIKey",
             currScript = document.currentScript; // need to cache it otherwise, this returns null in event handler cb
