--- a/carousel.html
+++ b/carousel.html
@@ -167,7 +167,6 @@
                     <img src="..." alt="...hero-img-title...">
                 </div> -->
             </div>
-
             <!-- 2st slide -->
             <div class="showcase-carousel bg-lightgray">
                 <div class="center-text padding-around absolute w-7 middle-center">
@@ -180,7 +179,6 @@
                     <img src="..." alt="...hero-img-title...">
                 </div> -->
             </div>
-
             <!-- 3rd slide -->
             <div class="showcase-carousel bg-lightgray">
                 <div class="center-text padding-around absolute w-7 middle-center">
@@ -193,14 +191,13 @@
                     <img src="..." alt="...hero-img-title...">
                 </div> -->
             </div>
-
         </section>
-
 
         <!-- different Slide Animation -->
         <h3 class="section-title margin-bottom-45 center-text">Carousel with Transition Effects</h3>
         <section class="carousel margin-bottom-45" id="carousel4">
             <div class="indicator bottom-center-30"></div>
+            <!-- must use this carousel wraper for slide effect -->
             <div class="carousel-slide bg-lightgray">
                 <!-- 1st slide -->
                 <div class="showcase-carousel default show enlarge bg-white">
@@ -241,23 +238,22 @@
             </div> <!-- carousel-customName -->
         </section>
 
-
     </div> <!-- .container-fluid -->
 
     <script src="js/gridbox.js"></script>
     <script>
-
-    
     im("#navbar").navbar();
-    im("#carousel1").carousel(null);
-    
+
+    // carousel with default option
+    im("#carousel1").carousel();
+
     // carousel with options
     im("#carousel2").carousel({
         arrowToggle: false,
         indicator: {
             text: ["Slide 1", "Slide 2", "Slide 3"]
         },
-        transition: "fade",
+        // transition: "fade", // transition property can be omitted
     });
 
     im("#carousel3").carousel({
@@ -274,6 +270,7 @@
             text: ["Showcase One", "Showcase Two", "Showcase Three"]
         },
         transition: "slide",
+        timeout: 5000, // with timeout period
     });
 
     </script>
