add timeout status bar feature

--- a/carousel.html
+++ b/carousel.html
@@ -269,6 +269,7 @@
         indicator: {
             text: ["Showcase One", "Showcase Two", "Showcase Three"]
         },
+        statusBar: true,
         transition: "slide",
         timeout: 5000, // with timeout period
     });
