fix carousel indicator progress bar issue

--- a/carousel.html
+++ b/carousel.html
@@ -267,9 +267,10 @@
     im("#carousel4").carousel({
         arrowToggle: false,
         indicator: {
-            text: ["Showcase One", "Showcase Two", "Showcase Three"]
+            text: ["Showcase One", "Showcase Two", "Showcase Three"],
+            progressBar: true,
         },
-        statusBar: true,
+        progressBar: true,
         transition: "slide",
         timeout: 10000, // with timeout period
     });
