add more carret styling

--- a/dropdown.html
+++ b/dropdown.html
@@ -14,7 +14,7 @@
         <section class="showcase bg-lightgray">
 
             <div class="dropdown absolute middle-center" id="dropdown1">
-                <button class="btn btn-primary" type="button">Dropdown</button>
+                <button class="btn btn-primary arrow-circle" type="button">Dropdown</button>
 
                 <ul class="dropdown-list hide">
                     <li>Item 1</li>
